@startuml

hide empty members

package social.utils.effect {

interface Effect {
  Update applyTo(Update update)
}

class CauseEmotion {
  Role role
  Emotion emotion
}

class ModifyAttitude {
  Role from, toward
  AttitudeType type
  int value
}

class AddRelationship {
  Role from, toward
  Relationship relationship
}

class RemoveRelationship {
  Role from, toward
  Relationship relationship
}

}

Effect <|-- CauseEmotion
Effect <|-- ModifyAttitude
Effect <|-- AddRelationship
Effect <|-- RemoveRelationship


@enduml